chapter-5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-03-26 - 17:33:49 +0000
  name: chapter5-ingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - backend:
              service:
                name: account-service
                port:
                  name: http
            path: /accounts
            pathType: Prefix
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  name: http
